--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body style="background-color:green">
 <table cellSpacing="20px">
 <tr>
-<td><img src="C:\Users\admin\Documents\bikesh\ok.jpg" width="200px" height="200px">
+<td><img src="./bikesh.jpg" width="200px" height="200px">
 </td>
 <td><h1> Bikesh Tamang </h1>
 <p>
